Change title elm from <p> to <h2>.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <script type = "text/babel">
         ReactDOM.render(
-            <p>Мой первый Интернет-магазин!</p>
+            <h2>Мой первый Интернет-магазин!</h2>
             ,document.body
         );
     </script>
