--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <script type = "text/babel">
         ReactDOM.render(
-            <h2>Мой первый Интернет-магазин!</h2>
+            <div>
+                <h2>Мой первый Интернет-магазин!</h2>
+                <p>Пока закрыто.</p>
+            </div>
             ,document.body
         );
     </script>
