Rename main_page, add three pages of goods.

--- a/goods/product_1.html
+++ b/goods/product_1.html
@@ -2,7 +2,7 @@
 <html lang = "ru">
 <head>
     <meta charset = "UTF-8">
-    <title>Coffee Shop</title>
+    <title>Товар #1</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
@@ -11,8 +11,7 @@
     <script type = "text/babel">
         ReactDOM.render(
             <div>
-                <h2>Coffee Shop</h2>
-                <p>Пока закрыто.</p>
+                <h2>Кофе #1</h2>
             </div>
             ,document.body
         );
