--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang = "ru">
 <head>
     <meta charset = "UTF-8">
-    <title>Coffee Shop</title>
+    <title>Color Shop</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
+    <div id = "main_container"></div>
     <script type = "text/babel">
         ReactDOM.render(
             <div>
-                <h2>Coffee Shop</h2>
+                <h2>Color Shop</h2>
                 <p>Пока закрыто.</p>
             </div>
-            ,document.body
+            ,document.querySelector("#main_container")
         );
     </script>
 </body>
