--- a/goods/product_1.html
+++ b/goods/product_1.html
@@ -2,18 +2,34 @@
 <html lang = "ru">
 <head>
     <meta charset = "UTF-8">
-    <title>Товар #1</title>
+    <title>Color Shop</title>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
+    <div id = "main_container"></div>
     <script type = "text/babel">
         ReactDOM.render(
             <div>
-                <h2>Кофе #1</h2>
+                <h2>Лесной Зелёный</h2>
+                <h3>Описание товара</h3>
+                <img src = "imgs/forest_green.png"/>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/>
+                    Quia aliquam placeat, earum neque molestiae similique aliquid culpa maxime in ex voluptatem cumque.<br/>
+                    Corrupti autem dolores, error a aspernatur explicabo sequi!
+                </p>
+                <h3>Характеристики товара</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, assumenda nam quidem aspernatur in corrupti minus eum beatae fuga aperiam repellat amet animi dolorem modi voluptas! Neque ratione cupiditate sapiente.</p>
+                <h3>Подробное описание товара</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, impedit nam. Sequi laborum aliquam dolorem perferendis nesciunt, magni consectetur dicta doloremque magnam eius, deserunt libero, et voluptates quam numquam quod.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod illum reiciendis vitae dolores perferendis vel delectus fuga, debitis laudantium. Eos consequatur ipsa adipisci voluptas neque accusamus nemo soluta facilis dicta?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, earum quis distinctio quo iusto, asperiores magni facere exercitationem mollitia obcaecati animi cumque delectus similique debitis voluptates, veniam sequi odio nemo!</p>
+                <hr/>
+                <p>Все права защищены.</p>
             </div>
-            ,document.body
+            ,document.querySelector("#main_container")
         );
     </script>
 </body>
