--- a/goods/product_1.html
+++ b/goods/product_1.html
@@ -14,7 +14,7 @@
             /* Поместить "название продукта" и изображение в свойства компонента и передавать через вызов. */
             render() {
                 return <div id = "product_description">
-                    <h2>Лесной Зелёный</h2>
+                    <h2>{this.props.productName}</h2>
                     <h3>Описание товара</h3>
                     <img src = "imgs/forest_green.png"/>
                     <p>
@@ -57,7 +57,7 @@
 
         ReactDOM.render(
             <div>
-                <ProductDescription/>
+                <ProductDescription productName = "Лесной Зелёный"/>
                 <ProductSpecifications/>
                 <ProductDetails/>
                 <PageFooter/>
