--- a/goods/product_3.html
+++ b/goods/product_3.html
@@ -10,10 +10,21 @@
 <body>
     <div id = "main_container"></div>
     <script type = "text/babel">
+        class Navigation extends React.Component {
+            render() {
+                return <div>
+                    <ul>
+                        <li>Главная</li>
+                        <li>Каталог</li>
+                        <li>Контакты</li>
+                    </ul>
+                </div>
+            }
+        }
+
         class ProductDescription extends React.Component {
             render() {
                 return <div id = "product_description">
-                    <h2>{this.props.productName}</h2>
                     <h3>Описание товара</h3>
                     <img src = {this.props.productImage}/>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquam placeat, earum neque molestiae similique aliquid culpa maxime in ex voluptatem cumque, corrupti autem dolores, error a aspernatur explicabo sequi!</p>
@@ -56,7 +67,10 @@
 
         ReactDOM.render(
             <div>
-                <ProductDescription productName = "Дымчатая Роза" productImage = "imgs/misty_rose.png"/>
+                <h2>Дымчатая Роза</h2>
+                <Navigation/>
+                <hr/>
+                <ProductDescription productImage = "imgs/misty_rose.png"/>
                 <ProductSpecifications/>
                 <ProductDetails/>
                 <PageFooter/>
