Add copyright sign into PageFooter and add PageFooter into index.hml.

--- a/goods/product_3.html
+++ b/goods/product_3.html
@@ -60,7 +60,7 @@
             render() {
                 return <div id = "page_footer">
                     <hr/>
-                    <p>Все права защищены.</p>             
+                    <p>&copy; Все права защищены.</p>             
                 </div>
             }
         }
