--- a/goods/product_1.html
+++ b/goods/product_1.html
@@ -61,7 +61,7 @@
             render() {
                 return <div id = "page_footer">
                     <hr/>
-                    <p>Все права защищены.</p>
+                    <p>&copy; Все права защищены.</p>
                 </div>
             }
         }
