Add hyperlinks to Navigation.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 return <div>
                     <ul>
                         <li>Главная</li>
-                        <li>Каталог</li>
-                        <li>Контакты</li>
+                        <li><a href = "catalog.html">Каталог</a></li>
+                        <li><a href = "#">Контакты</a></li>
                     </ul>
                     <hr/>
                 </div>
