--- a/catalog.html
+++ b/catalog.html
@@ -14,9 +14,9 @@
             render() {
                 return <div>
                     <ul>
-                        <li>Главная</li>
+                        <li><a href = "index.html">Главная</a></li>
                         <li>Каталог</li>
-                        <li>Контакты</li>
+                        <li><a href = "#">Контакты</a></li>
                     </ul>
                     <hr/>
                 </div>
@@ -35,6 +35,7 @@
         ReactDOM.render(
             <div>
                 <Navigation/>
+                <h2>Каталог</h2>
                 <PageFooter/>
             </div>
             ,document.querySelector("#main_container")
