--- a/goods/product_3.html
+++ b/goods/product_3.html
@@ -14,9 +14,9 @@
             render() {
                 return <div>
                     <ul>
-                        <li>Главная</li>
-                        <li>Каталог</li>
-                        <li>Контакты</li>
+                        <li><a href = "../index.html">Главная</a></li>
+                        <li><a href = "../catalog.html">Каталог</a></li>
+                        <li><a href = "#">Контакты</a></li>
                     </ul>
                     <hr/>
                 </div>
