--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href = "index.html">Главная</a></li>
                         <li>Каталог</li>
-                        <li><a href = "#">Контакты</a></li>
+                        <li><a href = "contacts.html">Контакты</a></li>
                     </ul>
                     <hr/>
                 </div>
