--- a/goods/product_2.html
+++ b/goods/product_2.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li><a href = "../index.html">Главная</a></li>
                         <li><a href = "../catalog.html">Каталог</a></li>
-                        <li><a href = "#">Контакты</a></li>
+                        <li><a href = "../contacts.html">Контакты</a></li>
                     </ul>
                     <hr/>
                 </div>
