Small improvement at catalog_page.

--- a/catalog.html
+++ b/catalog.html
@@ -23,27 +23,30 @@
             }
         }
 
-        class GoodsList extends React.Component {
+        class GoodsList extends React.Component { /* Выделить "мини-карточку" товара в собственный компонент? */
             render() {
                 return <div>
+                    <p>Лесной Зелёный</p>
                     <a href = "goods/product_1.html">
                         <img src = "goods/imgs/forest_green.png" width = "100px"/>
                         <br/>
-                        Лесной Зелёный
+                        Подробнее...
                     </a>
                     <br/>
                     <br/>
+                    <p>Тёмный Апельсин</p>
                     <a href = "goods/product_2.html">
                         <img src = "goods/imgs/dark_orange.png" width = "100px"/>
                         <br/>
-                        Тёмный Апельсин
+                        Подробнее...
                     </a>
                     <br/>
                     <br/>
+                    <p>Дымчатая Роза</p>
                     <a href = "goods/product_3.html">
                         <img src = "goods/imgs/misty_rose.png" width = "100px"/>
                         <br/>
-                        Дымчатая Роза
+                        Подробнее...
                     </a>
                     <br/>
                     <br/>
