--- a/goods/product_1.html
+++ b/goods/product_1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset = "UTF-8">
     <title>Color Shop</title>
+    <link rel = "stylesheet" type = "text/css" href = "../styles.css">
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
