Add class to main_DIV in Navigation AND add color to Navigation hyperlinks.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type = "text/babel">
         class Navigation extends React.Component {
             render() {
-                return <div>
+                return <div class = "navigation">
                     <ul>
                         <li>Главная</li>
                         <li><a href = "catalog.html">Каталог</a></li>
