--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
     <script type = "text/babel">
         class Navigation extends React.Component {
             render() {
-                return <div>
+                return <div class = "navigation">
                     <ul>
                         <li><a href = "index.html">Главная</a></li>
                         <li><a href = "catalog.html">Каталог</a></li>
