Add styles and small improvements to ContactForm.

--- a/contacts.html
+++ b/contacts.html
@@ -36,19 +36,19 @@
 
         class ContactForm extends React.Component {
             render() {
-                return <div>
+                return <div id = "contact_form">
                     <form>
                         <p>
-                            Ваше имя: <input type = "text"/>
+                            Ваше имя<br/><input type = "text"/>
                         </p>
                         <label>
-                            Ваш E-mail: <input type = "text"/>
+                            Ваш E-mail<br/><input type = "text"/>
                         </label>
                         <p>
-                            Тема вопроса: <input type = "text"/>
+                            Тема вопроса<br/><input type = "text"/>
                         </p>
                         <p>
-                            Ваш вопрос: <textarea></textarea>
+                            Ваш вопрос<br/><textarea></textarea>
                         </p>
                         <button type = "submit">Отправить ваш вопрос нам</button>
                         <button type = "reset">Очистить введённое</button>
