Add border around IMG at ProductDescription AND change from HR to border at Navigation and PageFooter.

--- a/contacts.html
+++ b/contacts.html
@@ -19,7 +19,6 @@
                         <li><a href = "catalog.html">Каталог</a></li>
                         <li>Контакты</li>
                     </ul>
-                    <hr/>
                 </div>
             }
         }
@@ -29,7 +28,7 @@
                 return <div>
                     <h3>Наши координаты</h3>
                     <p>Наш телефон: +7 (111) 222-33-44</p>
-                    <p>Наш E-mail: email@eshop.com или напишите нам через форму ниже.</p>
+                    <p>Наш E-mail: email@eshop.com или напишите нам через форму выше.</p>
                 </div>
             }
         }
@@ -60,7 +59,6 @@
         class PageFooter extends React.Component {
             render() {
                 return <div id = "page_footer">
-                    <hr/>
                     <p>&copy; Все права защищены.</p>             
                 </div>
             }
