Add russian name of the Shop into PageFooter AND add new style of H2 on every page.

--- a/goods/product_1.html
+++ b/goods/product_1.html
@@ -68,6 +68,7 @@
             render() {
                 return <div id = "page_footer">
                     <p>&copy; Все права защищены.</p>
+                    <p>Магазин Цветов</p>
                 </div>
             }
         }
