--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         class PageFooter extends React.Component {
             render() {
                 return <div id = "page_footer">
-                    <p>&copy; Все права защищены.</p>             
+                    <p>&copy; Все права защищены.</p>
+                    <p>Магазин Цветов</p>
                 </div>
             }
         }
