--- a/goods/product_2.html
+++ b/goods/product_2.html
@@ -63,6 +63,7 @@
             render() {
                 return <div id = "page_footer">
                     <p>&copy; Все права защищены.</p>
+                    <p>Магазин Цветов</p>
                 </div>
             }
         }
