--- a/goods/product_3.html
+++ b/goods/product_3.html
@@ -62,7 +62,8 @@
         class PageFooter extends React.Component {
             render() {
                 return <div id = "page_footer">
-                    <p>&copy; Все права защищены.</p>             
+                    <p>&copy; Все права защищены.</p>
+                    <p>Магазин Цветов</p>
                 </div>
             }
         }
